--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <header>
 <nav>
 <a href="index.html">Home</a>
+<a href="project.html">Project</a>
 <a href="about.html">About</a>
 <a href="contact.html">Contact</a>
 </nav>
@@ -20,6 +21,6 @@
 <h1>Contact Me</h1>
 <p>Email: ruthteshome434@gmail.com</p>
 <p>GitHub: github.com/Ruth434</p>
-</section>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252230.25579730124!2d38.613331178974605!3d8.963140369240898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85cef5ab402d%3A0x8467b6b037a24d49!2sAddis%20Ababa!5e0!3m2!1sen!2set!4v1763536267058!5m2!1sen!2set" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
-</html>
+</section>
