--- a/about.html
+++ b/about.html
@@ -11,8 +11,10 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="project.html">Project</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+
     </nav>
 </header>
 
