--- a/index.html
+++ b/index.html
@@ -11,37 +11,40 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
+       <a href="project.html">Project</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+          <a href="contact.html">Contact</a>
     </nav>
 </header>
-
-<!-- HERO SECTION -->
 <section class="hero">
-    <div class="hero-content">
-        <h1>Hello, I'm <span>Ruth</span> ✨</h1>
-        <p>A student, learner, and future creator.  
-           I love technology, self-improvement, and building beautiful things.</p>
+<div class="circle c1"></div>
+<div class="circle c2"></div>
+<div class="circle c3"></div>
 
-    </div>
+
+<img src="Profile.jpg/pink cute pfp💖.jpeg" class="profile-pic" alt="Ruth Profile">
+
+</div>
+
+<h1 class="hero-title fade-in">Hi, I'm <span>Ruth</span> ✨</h1>
+
+
+<p class="intro fade-in">
+A creative student, designer, and future engineer.<br>
+I build cute, modern, and beautiful digital experiences.
+</p>
+
+
+
+
+<a href="project.html" class="see-work fade-in">See My Work 💗</a>
+
+
+
 </section>
+</body>
+</html>
 
-<!-- PROJECTS PREVIEW -->
-<section class="projects">
-    <h2>Featured Projects 💫</h2>
-    <div class="projects-container">
-        <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>My first personal website built with HTML & CSS.</p>
-        </div>
-
-        <div class="project-card">
-            <h3>School Work</h3>
-            <p>A programming tasks I’ve completed.</p>
-        </div>
-
-    </div>
 </section>
-
 </body>
 </html>
